bad/add_invalid_types_class_class.example_compiler_output
ERROR
[1mbad/add_invalid_types_class_class.lat:6:4: [1;31merror: [0;1maddition is defined only for int values or string values, not `X` and `X`[m
	x + x;
	  [1;32m^[m
